# mlbusters

./: .env.dist  Dockerfile  app.py  chroma.py  clip.py  db.py  deps.py  docker-compose.yml  keymap.py  main.py  models.py  pyproject.toml  search_translate.py  settings.py  similarity.py  storage.py
db/: chroma.sqlite3
db/743aebc4-0e33-4ad1-8e41-aba89c3151b7/: index_metadata.pickle
inference/: .env.dist  Dockerfile  clip.py  deps.py  download_whisper.sh  frame_video.py  keymap.py  main.py  models.py  requirements.txt  settings.py  translator.py  whisper.py
main/: .env.dist  Dockerfile  chroma.py  clip.py  deps.py  main.py  models.py  requirements.txt  search_correction.py  search_translate.py  settings.py
processors/: comparing.py  encoding.py  frame_extracting.py
